[gd_scene load_steps=20 format=2]

[ext_resource path="res://Assets/Misc. Objects/Player1.png" type="Texture" id=1]
[ext_resource path="res://Player1.gd" type="Script" id=2]
[ext_resource path="res://Assets/Tracks/Start.png" type="Texture" id=3]
[ext_resource path="res://Background.gd" type="Script" id=4]
[ext_resource path="res://Assets/Tracks/Track1.png" type="Texture" id=5]
[ext_resource path="res://Assets/Tracks/Track2.png" type="Texture" id=6]
[ext_resource path="res://Assets/Tracks/Track4.png" type="Texture" id=7]
[ext_resource path="res://Assets/Tracks/Track3.png" type="Texture" id=8]
[ext_resource path="res://Assets/Tracks/Track8.png" type="Texture" id=9]
[ext_resource path="res://Assets/Tracks/Track5.png" type="Texture" id=10]
[ext_resource path="res://Assets/Tracks/Track7.png" type="Texture" id=11]
[ext_resource path="res://Assets/Tracks/Track6.png" type="Texture" id=12]
[ext_resource path="res://Assets/Misc. Objects/Menu Arrow.png" type="Texture" id=13]
[ext_resource path="res://Assets/Misc. Objects/Player2.png" type="Texture" id=14]
[ext_resource path="res://Player2.gd" type="Script" id=15]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 512.5, 300 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 120, 50 )

[sub_resource type="CapsuleShape2D" id=2]
radius = 6.66245
height = 16.7359

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 8.23, 50 )

[node name="Node2D" type="Node2D"]

[node name="Background" type="CanvasLayer" parent="."]
script = ExtResource( 4 )

[node name="Track" type="Sprite" parent="Background"]
position = Vector2( 512, 300 )
texture = ExtResource( 3 )

[node name="Track1" type="Sprite" parent="Background/Track"]
visible = false
position = Vector2( -350, -200 )
scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 5 )

[node name="TrackArea1" type="Area2D" parent="Background/Track/Track1"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Background/Track/Track1/TrackArea1"]
shape = SubResource( 1 )

[node name="Track2" type="Sprite" parent="Background/Track"]
visible = false
position = Vector2( -120, -200 )
scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 6 )

[node name="TrackArea2" type="Area2D" parent="Background/Track/Track2"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Background/Track/Track2/TrackArea2"]
shape = SubResource( 1 )

[node name="Track3" type="Sprite" parent="Background/Track"]
visible = false
position = Vector2( 120, -200 )
scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 8 )

[node name="TrackArea3" type="Area2D" parent="Background/Track/Track3"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Background/Track/Track3/TrackArea3"]
shape = SubResource( 1 )

[node name="Track4" type="Sprite" parent="Background/Track"]
visible = false
position = Vector2( 350, -200 )
scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 7 )

[node name="TrackArea4" type="Area2D" parent="Background/Track/Track4"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Background/Track/Track4/TrackArea4"]
shape = SubResource( 1 )

[node name="Track5" type="Sprite" parent="Background/Track"]
visible = false
position = Vector2( -350, 200 )
scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 10 )

[node name="TrackArea5" type="Area2D" parent="Background/Track/Track5"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Background/Track/Track5/TrackArea5"]
shape = SubResource( 1 )

[node name="Track6" type="Sprite" parent="Background/Track"]
visible = false
position = Vector2( -120, 200 )
scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 12 )

[node name="TrackArea6" type="Area2D" parent="Background/Track/Track6"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Background/Track/Track6/TrackArea6"]
shape = SubResource( 1 )

[node name="Track7" type="Sprite" parent="Background/Track"]
visible = false
position = Vector2( 120, 200 )
scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 11 )

[node name="TrackArea7" type="Area2D" parent="Background/Track/Track7"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Background/Track/Track7/TrackArea7"]
shape = SubResource( 1 )

[node name="Track8" type="Sprite" parent="Background/Track"]
visible = false
position = Vector2( 350, 200 )
scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 9 )

[node name="TrackArea8" type="Area2D" parent="Background/Track/Track8"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Background/Track/Track8/TrackArea8"]
shape = SubResource( 1 )

[node name="Arrow1" type="Sprite" parent="Background/Track"]
visible = false
position = Vector2( 450, 0 )
scale = Vector2( 0.3, 0.3 )
texture = ExtResource( 13 )

[node name="ArrowAreaRight" type="Area2D" parent="Background/Track/Arrow1"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Background/Track/Arrow1/ArrowAreaRight"]
shape = SubResource( 3 )

[node name="Arrow2" type="Sprite" parent="Background/Track"]
visible = false
position = Vector2( -450, 0 )
rotation = 3.14159
scale = Vector2( 0.3, -0.3 )
texture = ExtResource( 13 )

[node name="ArrowAreaLeft" type="Area2D" parent="Background/Track/Arrow2"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Background/Track/Arrow2/ArrowAreaLeft"]
shape = SubResource( 3 )

[node name="Player1" type="KinematicBody2D" parent="Background"]
position = Vector2( 761, 360 )
rotation = -3.64774
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="Background/Player1"]
texture = ExtResource( 1 )

[node name="MenuActivator" type="Area2D" parent="Background/Player1"]

[node name="CarBox" type="CollisionShape2D" parent="Background/Player1/MenuActivator"]
position = Vector2( 0, 6.10352e-05 )
rotation = 1.5708
shape = SubResource( 2 )

[node name="SlipStreamS1" type="Area2D" parent="Background/Player1"]

[node name="SlipArea" type="CollisionShape2D" parent="Background/Player1/SlipStreamS1"]
position = Vector2( -40, 0 )
rotation = 1.5708
shape = SubResource( 4 )

[node name="CarBody1" type="Area2D" parent="Background/Player1"]

[node name="SlipArea" type="CollisionShape2D" parent="Background/Player1/CarBody1"]
position = Vector2( -50.9839, 0.67627 )
rotation = 1.5708
shape = SubResource( 4 )

[node name="CarBox" type="CollisionShape2D" parent="Background/Player1"]
position = Vector2( 0, 6.10352e-05 )
rotation = 1.5708
shape = SubResource( 2 )

[node name="Player2" type="KinematicBody2D" parent="Background"]
position = Vector2( 420, 195 )
rotation = -0.542797
script = ExtResource( 15 )

[node name="Sprite" type="Sprite" parent="Background/Player2"]
texture = ExtResource( 14 )

[node name="SlipStreamS2" type="Area2D" parent="Background/Player2"]

[node name="SlipArea" type="CollisionShape2D" parent="Background/Player2/SlipStreamS2"]
position = Vector2( -50.984, -0.117828 )
rotation = 1.5708
shape = SubResource( 4 )

[node name="CarBody2" type="Area2D" parent="Background/Player2"]

[node name="SlipArea" type="CollisionShape2D" parent="Background/Player2/CarBody2"]
position = Vector2( -50.9839, 0.67627 )
rotation = 1.5708
shape = SubResource( 4 )

[node name="CarBox" type="CollisionShape2D" parent="Background/Player2"]
position = Vector2( 0, 6.10352e-05 )
rotation = 1.5708
shape = SubResource( 2 )

[node name="Timer" type="Timer" parent="Background"]
wait_time = 0.05

[node name="Player1_Time" type="Label" parent="Background"]
visible = false
margin_left = 12.0
margin_top = 10.0
margin_right = 74.0
margin_bottom = 58.0
rect_scale = Vector2( 2.5, 2.5 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
text = "Player 1 "
autowrap = true

[node name="Player2_Time" type="Label" parent="Background"]
visible = false
margin_left = 860.0
margin_top = 10.0
margin_right = 921.0
margin_bottom = 58.0
rect_scale = Vector2( 2.5, 2.5 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Player 2 "
autowrap = true

[connection signal="area_entered" from="Background/Player1/MenuActivator" to="Background/Player1" method="_on_Area2D_area_entered"]
[connection signal="area_entered" from="Background/Player1/SlipStreamS1" to="Background/Player2" method="_on_SlipStreamS1_area_entered"]
[connection signal="area_exited" from="Background/Player1/SlipStreamS1" to="Background/Player2" method="_on_SlipStreamS1_area_exited"]
[connection signal="area_entered" from="Background/Player2/SlipStreamS2" to="Background/Player1" method="_on_SlipStreamS2_area_entered"]
[connection signal="area_exited" from="Background/Player2/SlipStreamS2" to="Background/Player1" method="_on_SlipStreamS2_area_exited"]
